--- a/sim/templates/base.html
+++ b/sim/templates/base.html
@@ -1,8 +1,8 @@
 <html>
 
 <head>
-	<link rel="stylesheet" href="{{ url_for ('static', filename=" css/bootstrap.min.css")}}">
-	<link rel="stylesheet" href="{{url_for('static', filename=" css/style.css")}}">
+	<link rel="stylesheet" href="{{ url_for ('static', filename='css/bootstrap.min.css')}}">
+	<link rel="stylesheet" href="{{url_for('static', filename='css/style.css')}}">
 
 	<title>WELCOME TO SIM PENGADUAN</title>
 </head>
