merubah FILE BASE

--- a/sim/templates/base.html
+++ b/sim/templates/base.html
@@ -1,6 +1,9 @@
-<html>
+<!DOCTYPE html>
+<html lang="en">
 
 <head>
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link rel="stylesheet" href="{{ url_for ('static', filename='css/bootstrap.min.css')}}">
 	<link rel="stylesheet" href="{{url_for('static', filename='css/style.css')}}">
 
@@ -69,7 +72,7 @@
 				<div class="shadow p-3 mb-5 bg-white rounded">
 					{%if current_user.is_authenticated%}
 					<div class="card" style="width: 18rem;">
-						<img src="{{url_for('static', filename=" img/" + current_user.foto)}}" class="card-img-top"
+						<img src="{{url_for('static', filename=' img/' + current_user.foto)}}" class="card-img-top"
 							alt="...">
 						<div class="card-body">
 							<h5 class="card-title">{{current_user.nama}}</h5>
