--- a/sim/templates/about.html
+++ b/sim/templates/about.html
@@ -1,8 +1,9 @@
 {% extends "base.html" %}
 {% block content %}
 
-<h1>History Of Class Info 3 Bar Bar</h1>
-<p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Aspernatur, quae. Nisi aliquam sit quia natus minima, consequuntur officiis sunt aliquid nihil nam? Nisi qui fuga ullam quasi quo harum magnam.</p>
+<h1>Aboute Me</h1>
+<p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Aspernatur, quae. Nisi aliquam sit quia natus minima,
+    consequuntur officiis sunt aliquid nihil nam? Nisi qui fuga ullam quasi quo harum magnam.</p>
 
 
 
